--- a/quizApp/src/styles.css
+++ b/quizApp/src/styles.css
@@ -7,3 +7,18 @@ html {
 *::after {
   box-sizing: inherit;
 }
+
+.container {
+  margin: 0 auto;
+  padding: 0;
+}
+
+.serch-form {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 0;
+  align-items: center;
+  width: 290px;
+}
