--- a/quizApp/src/tamplate/testInterFace.hbs
+++ b/quizApp/src/tamplate/testInterFace.hbs
@@ -1,7 +1,7 @@
 <h2>{{question}}</h2>
 <form action="" class="currentQuestion">
     {{#each incorrect_answers}}
-    <input type="radio" name="{{this}}" value="{{this}}" id="{{this}}">
+    <input type="radio" name="answer" value="{{this}}" id="{{this}}">
     <label for="{{this}}">{{this}}</label>
     {{/each}}
     <button type="submit" class="nextQuestionBtn-js">Next</button>
