finish based functionality, added rendering start page after end of testing

--- a/quizApp/src/tamplate/showResaltTemplate.hbs
+++ b/quizApp/src/tamplate/showResaltTemplate.hbs
@@ -1,3 +1,3 @@
 <h2>Your Resalt :</h2>
 <p>{{correctAnswers}}</p>
-<button>Start Again!</button>
+<button class="show-resalt-btn">Start Again!</button>
