--- a/quizApp/src/tamplate/showResaltTemplate.hbs
+++ b/quizApp/src/tamplate/showResaltTemplate.hbs
@@ -1,3 +1,5 @@
-<h2>Your Resalt :</h2>
-<p>{{correctAnswers}}</p>
-<button class="show-resalt-btn">Start Again!</button>
+<div class="show-resalt">
+    <h2 class="show-resalt__title">Your Resalt :</h2>
+    <p class="show-resalt__quantity-answers">{{correctAnswers}}/10</p>
+    <button class="show-resalt-btn page-btn">Start Again!</button>
+</div>
