--- a/quizApp/src/tamplate/startTestTemplate.hbs
+++ b/quizApp/src/tamplate/startTestTemplate.hbs
@@ -1,4 +1,4 @@
-<form method="get" id="searchQuestions" class="serch-form">
+<form method="get" id="searchQuestions" class="search-form">
     <select class="serch-form__category" name="category">
         {{#each trivia_categories}}
         <option value="{{id}}">{{name}}</option>
@@ -16,5 +16,5 @@
         <option value="multiple">multiple</option>
         <option value="boolean">true/false</option>
     </select>
-    <button type="submit" class="serch-form__submit">start!</button>
+    <button type="submit" class="serch-form__submit page-btn">start!</button>
 </form>
