--- a/quizApp/src/tamplate/testInterFace.hbs
+++ b/quizApp/src/tamplate/testInterFace.hbs
@@ -1,8 +1,10 @@
-<h2>{{question}}</h2>
-<form action="" class="currentQuestion">
-    {{#each incorrect_answers}}
-    <input type="radio" name="answer" value="{{this}}" id="{{this}}">
-    <label for="{{this}}">{{this}}</label>
-    {{/each}}
-    <button type="submit" class="nextQuestionBtn-js">Next</button>
-</form>
+<div class="test-interface">
+    <h2 class="test-interface__title">{{question}}</h2>
+    <form action="" class="currentQuestion test-interface__form">
+        {{#each incorrect_answers}}
+        <input type="radio" name="answer" value="{{this}}" id="{{this}}" class="form__check-box">
+        <label for="{{this}}" class="form__label">{{this}}</label>
+        {{/each}}
+        <button type="submit" class="nextQuestionBtn-js page-btn page-btn--next-question">Next</button>
+    </form>
+</div>
