--- a/quizApp/src/styles.css
+++ b/quizApp/src/styles.css
@@ -4,7 +4,6 @@ html {
 }
 
 body {
-  max-height: 100%;
   background-color: #242582;
   color: #ffffff;
   margin: 0;
@@ -24,9 +23,9 @@ body {
   height: 100vh;
 }
 
-/* font-family: 'Raleway', ; */
-/* background-color: #242582; */
-/* color: #ffffff */
-/* border-color: #f64c72; */
-
-/* text color */
+.info {
+  text-align: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
