--- a/quizApp/src/styles/test-interface.css
+++ b/quizApp/src/styles/test-interface.css
@@ -26,6 +26,8 @@
 
 .form__check-box {
   opacity: 0;
+  position: absolute;
+  left: -99999999px;
 }
 
 .form__label {
@@ -36,12 +38,14 @@
   border-radius: 5px;
   width: 100%;
   text-align: center;
-  transition: all 0.2s linear;
+  transition: background 0.2s linear;
 }
 
-.form__label:hover,
-.form__label:focus {
-  transform: scale(1.1);
+.form__label:not(:last-child) {
+  margin-bottom: 5px;
+}
+
+.form__label:hover {
   background: linear-gradient(to right, #242582, #f64c72);
   cursor: pointer;
 }
@@ -74,5 +78,9 @@
   }
   .test-interface__title {
     margin-bottom: 35px;
+  }
+
+  .form__label:nth-child(even) {
+    margin-right: 5px;
   }
 }
